feat: inset shadows, gameboards now 11x11

--- a/src/ui/style.css
+++ b/src/ui/style.css
@@ -19,12 +19,17 @@ html, body { height: 100%; margin: 0; }
     display: flex;
     justify-content: center;
     align-items: center;
+    border-radius: 8px;
+    background-color: white;
 }
-
-#player-panel {
+#player-panel { 
+    grid-column: 2;
     grid-row: 2;
     min-width: 0;
     min-height: 0;
+    background: white;
+    padding: 1em;
+    border-radius: 8px;
 }
 
 #player-board { 
@@ -34,17 +39,33 @@ html, body { height: 100%; margin: 0; }
     min-width: 0;
     background: white;
     border-radius: 8px;
-}
 
-#player-panel { 
-    grid-column: 2;
-    grid-row: 2;
-    min-width: 0;
-    min-height: 0;
-    background: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
     padding: 1em;
+    gap: 1em;
+    align-items: center;
 }
 
-.shadowed {
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+#miss-board,
+#placement-board {
+    background-color: lightblue;
+    display: grid;
+    grid-template-columns: repeat(11, 1fr);
+    grid-template-rows: repeat(11, 1fr);
+    flex: 1;
+    min-width: 436.5px;
+    min-height: 436.5px;
+}
+#miss-board {
+
+}
+
+#placement-board {
+
+}
+
+.in-shadowed {
+        box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.1);
 }
